# intrepid-python-sdk

./: .gitignore  README.md  build.sh  installme.sh  pyproject.toml  requirements.txt  script.py  setup.cfg
examples/: 2_simple_node_declaration.py  3_1_node_sample_config.py  3_1_node_sample_config_lambda.py  3_node_config.toml  3_node_sample_config.py  4_tutorial_2.py  5_network_node_recv.py  5_network_node_send.py  5_tutorial_python_network_node.py  5_tutorial_python_network_node.py~  ex0.py  ex1.py  ex2.py  iros-challenge.py  netnode_recv_config.toml  netnode_send_config.toml  tutorial_2_config.toml
examples/agent/: agent-config.toml  demo.toml  node.toml  node_move.toml  ros2_demo.py  run_demo.py
examples/interception/: interception.py
examples/interception/pseudo_glam/: README.md  quat.py  test_vec3.py
examples/simulator/: abstract_sensor.py  build_environment.py  camera.py  connect.py  get_entities.py  get_vehicle.py  set_goal.py  spawn_vehicle.py  spawn_world.py  subscribe.py  subscribe_and_grab.py  subscribe_and_grab_navigate.py
examples/simulator/battlefield-of-things/: comp_vision.py  interception.py  interception_sdk.py
examples/simulator/battlefield-of-things /: bot2.py  commons.py  spawn_mission.py
examples/simulator/battlefield-of-things/pseudo_glam/: test_quat.py  vec3.py
intrepid/: __init__.py  cache_manager.py  config.py  config_manager.py  constants.py  decorators.py  errors.py  http_helper.py  log_manager.py  message.py  node.py  qos.py  status.py  utils.py
intrepid_python_sdk/: __init__.py  constants.py  intrepid_types.py  node.py  protocol.py  simulator.py  test.py  utils.py
intrepid_python_sdk/agent/: actions.py  adapter.py  capabilties.yaml  graph.json  runtime.py  world.py
intrepid_python_sdk/agent/adapters/: __init__.py  demo_adapter.py  px4.py  ros2.py
intrepid_python_sdk/pseudo_glam/: __init__.py  quat.py  vec3.py
intrepid_python_sdk/simulator/: __init__.py  simulator.py
tests/: test_build_environment.py  test_session.py  test_vehicle.py
