[metadata]
name = intrepid-python-sdk
version = attr: flagship.__version__
description = Intrepid Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License Version 2.0
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
author = Flagship Team
author_email = support@intrepid.ai
url = https://docs.developers.intrepid.ai/docs/python-v2-1
project_urls =
    Sources = https://github.com/IntrepidAI/intrepid-python-sdk
    Documentation = https://docs.developers.intrepid.ai/docs/python-v2-1
[options]
python_requires = >=3.7
packages = find:
package_dir =
    =.

install_requires =
    requests >=2.31.0
    pytest >=4.6.11
    enum34 ~=1.1.10
    responses >=0.17.0
    mock>=3.0.5

[options.packages.find]
where = .